# ha-home-rules

./: .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml  dependabot-automerge.yml  release.yml  validate.yml
custom_components/: __init__.py
custom_components/home_rules/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entities.py  entity.py  icons.json  manifest.json  number.py  rules.py  select.py  sensor.py  strings.json  switch.py
custom_components/home_rules/translations/: en.json
scripts/: check.sh
tests/: conftest.py  test_config_flow.py  test_coordinator_dry_run.py  test_coordinator_hvac_mode.py  test_coordinator_public_api.py  test_coordinator_scenarios.py  test_diagnostics.py  test_entity_states.py  test_entity_unavailable.py  test_init.py  test_manifest.py  test_notifications.py  test_number_entities.py  test_options_flow.py  test_rules.py  test_smoothed_decisions.py  test_smoothing.py
